# rust-ml

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  linear_regression.ipynb  requirements.txt  structure.txt  tarpaulin-report.html
.github/workflows/: coverage.yml  publish.yml  release.yml  test.yml
git-diagnosis/: changes.patch  gitbranch.txt  githistory.txt  gitstatus.txt  main-log.txt  single-layer-classifier-log.txt
logistic-regression/: Cargo.toml  diabetes-dataset.ipynb
logistic-regression/src/: main.rs
logistic-regression/src/logreg/: logistic_regression.rs  model.rs
notebooks/: linear_regression.ipynb  logistic_regression.ipynb  single_layer_classifier.ipynb
src/: lib.rs  main.rs  prelude.rs
src/bench/: classification_metrics.rs  classification_profiler.rs  error.rs  mod.rs  profiler.rs  regression_metrics.rs  regression_profiler.rs
src/bench/core/: mod.rs  profiler.rs  train_metrics.rs
src/builders/: builder.rs  linear_regression.rs  logistic_regression.rs  mod.rs  single_layer_classifier.rs
src/core/: error.rs  mod.rs  param_manager.rs  param_storage.rs  types.rs
src/core/activations/: activation.rs  activation_functions.rs  leaky_relu.rs  mod.rs  relu.rs  sigmoid.rs  tanh.rs
src/linear_regression/: model.rs
src/logistic_regression/: model.rs
src/model/: base.rs  error.rs  linear_regression.rs  logistic_regression.rs  ml_model.rs  mod.rs  single_layer_classifier.rs
src/model/core/: base.rs  mod.rs  (+4 more)
src/optim/: mod.rs
src/optimization/: gradient_descent.rs  mod.rs  optimizer.rs
src/utils/: data.rs
src/vis/: progress_bar.rs
(+7 files in other folders)
