[package]
name = "rust-ml"
version = "0.1.4"
edition = "2024"
license = "MIT"
description = "A collection of machine learning algorithms implemented in pure Rust (personal project for practice)."

# Library definition - crucial for binary files to import
[lib]
name = "rust_ml"
path = "src/lib.rs"

# Define the main binary
[[bin]]
name = "rust-ml"
path = "src/main.rs"

# Define model-specific binaries
[[bin]]
name = "logistic-regression"
path = "src/bin/logistic_regression.rs"

#[[bin]]
#name = "single-layer-classifier"
#path = "src/bin/single_layer_classifier.rs"

[[bin]]
name = "linear-regression"
path = "src/bin/linear_regression.rs"

[dependencies]
approx = "0.5.1"
ndarray = "0.16.1"
ndarray-rand = "0.15.0"
polars = { version = "0.46.0", features = ["csv", "dtype-full", "lazy", "ndarray", "polars-io"] }
rand = "0.9.1"
thiserror = "2.0.12"
